<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_screen_item"
        android:title="@string/main_screen_item"
        android:icon="@drawable/baseline_home_24" />
    <item
        android:id="@+id/massage_item"
        android:title="@string/massage_item"
        android:icon="@drawable/baseline_local_florist_24" />
    <item
        android:id="@+id/aricles_item"
        android:title="@string/four"
        android:icon="@drawable/article_24" />
    <item
        android:id="@+id/five"
        android:title="@string/five"
        android:icon="@drawable/baseline_content_paste_24" />
    <item
        android:id="@+id/profile_item"
        android:title="@string/profile_item"
        android:icon="@drawable/baseline_accessibility_24" />

</menu>